--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.13",
     "@prisma/client": "^5.21.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "kafkajs": "^2.2.4",
     "kysely": "^0.27.4",
+    "mtogo-proto-provider": "^1.0.7",
     "pg": "^8.13.0"
   },
   "devDependencies": {
