--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "npx tsc",
     "start": "node dist/index.js && node dist/migrations/migrate.js",
     "dev": "nodemon src/index.ts",
+    "dev2": "nodemon src/grpc/server.ts",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "prettier": "prettier --write src",
@@ -21,7 +22,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "kafkajs": "^2.2.4",
@@ -47,7 +48,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
