--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "kafkajs": "^2.2.4",
     "kysely": "^0.27.4",
     "mtogo-proto-provider": "^1.0.7",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
