--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "kysely": "^0.27.4",
     "mtogo-proto-provider": "^1.0.7",
     "pg": "^8.13.0",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
