--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
 
     "noUnusedLocals": true, // Report errors on unused locals
     "noUnusedParameters": true, // Report errors on unused parameters
-    "noFallthroughCasesInSwitch": true // Report errors for fallthrough cases in switch statement
+    "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
+    "typeRoots": ["./types"]
   },
   "include": [
     "src/**/*" // Include all files in the src directory
