--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "noUnusedLocals": true, // Report errors on unused locals
     "noUnusedParameters": true, // Report errors on unused parameters
     "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
-    "typeRoots": ["./types"]
+    "typeRoots": ["./types", "./node_modules/@types"] // List of folders to include type definitions from
   },
   "include": [
     "src/**/*" // Include all files in the src directory
