--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint src --fix",
     "prettier": "prettier --write src",
     "prepare": "husky || true",
-    "test": "jest --runInBand --verbose --coverage",
+    "test:migrate": "npx dotenv -e .env.test -- npx prisma migrate reset -f",
+    "test": "npm run test:migrate && jest --runInBand --verbose --coverage",
     "build-docker-image": "docker build -t testservice .",
     "start:prod": "npx prisma db push && node src/index.js"
   },
@@ -41,9 +42,11 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "artillery": "^2.0.21",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
@@ -51,6 +54,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
