--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fast-levenshtein": "^3.0.0",
     "kafkajs": "^2.2.4",
     "kysely": "^0.27.4",
     "mtogo-proto-provider": "^1.0.9",
