--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "kafkajs": "^2.2.4",
     "kysely": "^0.27.4",
     "mtogo-proto-provider": "^1.0.9",
+    "node-fetch": "^3.3.2",
     "pg": "^8.13.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
