--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
-    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fast-levenshtein": "^3.0.0",
@@ -39,6 +38,7 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@faker-js/faker": "^9.2.0",
+    "@prisma/client": "^6.1.0",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/github": "^11.0.0",
     "@semantic-release/release-notes-generator": "^14.0.1",
@@ -56,10 +56,12 @@
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "i": "^0.3.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "npm": "^10.9.2",
     "prettier": "^3.3.3",
-    "prisma": "^5.22.0",
+    "prisma": "^6.1.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
