--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.13.0",
     "sanitize-html": "^2.14.0",
+    "validator": "^13.12.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
@@ -49,6 +50,7 @@
     "@types/pg": "^8.11.10",
     "@types/sanitize-html": "^2.13.0",
     "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "artillery": "^2.0.21",
