--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
+    "@prisma/client": "^6.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fast-levenshtein": "^3.0.0",
@@ -39,7 +40,6 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@faker-js/faker": "^9.2.0",
-    "@prisma/client": "^6.1.0",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/github": "^11.0.0",
     "@semantic-release/release-notes-generator": "^14.0.1",
@@ -51,11 +51,11 @@
     "@types/sanitize-html": "^2.13.0",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "artillery": "^2.0.21",
     "dotenv-cli": "^7.4.4",
-    "eslint": "^9.12.0",
+    "eslint": "^9.17.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "i": "^0.3.7",
@@ -67,7 +67,6 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0"
+    "typescript": "^5.6.3"
   }
 }
